# SimplyKI

./: .dockerignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README-UPDATE.md  README.md  docker-compose.yml  install.sh  migrate-modules.sh  setup.sh
.github/workflows/: ci.yml  release.yml
api/: .env.example  README.md  nodemon.json  package-lock.json  package.json  server.js
api/src/middleware/: auth.js  errorHandler.js  logger.js  rateLimiter.js
api/src/routes/: brain.js  cost.js  projects.js  sessions.js  settings.js  status.js
config/: .env.template  README.md  simplyKI.json
core/: README.md  pkg-registry.json  setup.sh
core/auth/: config.js
core/plugins/: loader.js  registry.js
data/: schema.sql
docs/: ARCHITECTURE.md  PROJECT-STATUS.md  QUICK-START.md  README.md  web-ui-concept.md
modules/: README.md
modules/.claude/pkg/: api-registry.json  feature-map.json  projects.json
modules/backup/src/: backup-manager.sh  lightweight-monitor.sh
modules/brainmemory/: BUILD-REQUIREMENTS.md  Cargo.toml  Cargo.toml.backup  README.md  benchmark.sh  brainmemory-demo  build.sh  poc-demo.sh
modules/brainmemory/src/: lib.rs  main.rs  memory.rs  server.rs
modules/hcs/: README.md
modules/hcs/src/: hcs-auto-detect.sh  hcs-context-optimizer.sh  hybrid-context-manager.sh
modules/optimizemax/: README.md
tools/: README.md
web/: README.md  package.json
web-ui/: .gitignore  README.md  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.js
web-ui/src/: App.jsx  main.jsx
web-ui/src/lib/: utils.js
(+28 files in other folders)
